<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Action">Action</string>
    <string name="AddRoutineToHomeScreen">the Routine was added on the home screen</string>
    <string name="AllRoutinesAction">All Routine Actions</string>
    <string name="BluetoothOFF">Bluetooth OFF</string>
    <string name="BluetoothOn">Bluetooth On</string>
    <string name="EditTextHintAddRoutine">Routine Name</string>
    <string name="InformationAboutSettings">So that the app can perform all functions correctly, you must allow the app to bring your mobile phone out of silent mode</string>
    <string name="MediaSpeakerVolumeMax">Media Volume max +</string>
    <string name="MediaSpeakerVolumeMute">Media Volume mute -</string>
    <string name="NegativeButton">Cancel</string>
    <string name="NoAction">No Action</string>
    <string name="NotficationStartToastPart1">Notification for</string>
    <string name="NotificationDialogSettings">Notification options</string>
    <string name="NotificationSmallText">Routine</string>
    <string name="RoutineNameIsEmpty">the routine name is empty</string>
    <string name="RoutineRun">Routine is running</string>
    <string name="Settings">Settings</string>
    <string name="SpeakerVolumeMax">Volume Max +</string>
    <string name="SpeakerVolumeMute">Volume mute -</string>
    <string name="SpeakerVolumeVibration">Volume Vibration</string>
    <string name="StepsOfRoutine">There are 3 steps to creating a routine</string>
    <string name="ToAddThisShortcut">To add this shortcut please press the save button</string>
    <string name="TutoiralStep3">Step 3 To save the routine press the save symbol. Then press the play button to start the routine</string>
    <string name="TutorialInformation">Thanks for downloading the app! You can then use the app perfectly with a tutorial. If you want to go to the tutorial press OK</string>
    <string name="TutorialStep1">1st step create a new routine. Simply click on the round plus at the bottom right</string>
    <string name="TutorialStep2">Step 2 Enter a name for the routine and specify the actions. To do this, press No action and select an action. It is important that each action should only occur once in a routine</string>
    <string name="WifiOff">Wifi Off</string>
    <string name="WifiOn">Wifi On</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_myroutines">About MyRoutines</string>
    <string name="app_name">MyRoutines</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="changeDarkMode">Change dark mode</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="chooseAnAppStartTime">Choose an app start time</string>
    <string name="chooseAppText">Choose App</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy">Copy</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="general">General</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="noRoutinesAvaible">No routines aviable</string>
    <string name="not_set">Not set</string>
    <string name="notification_daily">daily</string>
    <string name="notification_dialog_Notification_retries">Notification retries</string>
    <string name="notification_everyDay">Every Day</string>
    <string name="notification_everyMonth">Every Month</string>
    <string name="notification_everyWeek">Every Week</string>
    <string name="notification_montly">montly</string>
    <string name="notification_vibration">Vibration</string>
    <string name="notification_vibration_long">Long</string>
    <string name="notification_vibration_medium">Medium</string>
    <string name="notification_vibration_no">No</string>
    <string name="notification_vibration_short">Short</string>
    <string name="notification_weekly">weekly</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_AppTime_default_value">3 sek</string>
    <string name="pref_DarkMode_default_value">System settings</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="runApp">run app</string>
    <string name="runTimer">run timer</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
</resources>
