<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <ListPreference android:entries="@array/pref_DarkMode_entries" android:title="@string/changeDarkMode" android:key="changeDarkMode" android:summary="%s" android:defaultValue="@string/pref_DarkMode_default_value" android:entryValues="@array/pref_DarkMode_values"/>
        <ListPreference android:entries="@array/pref_AppTime_entries" android:title="@string/chooseAnAppStartTime" android:key="changeAppTime" android:summary="%s" android:defaultValue="@string/pref_AppTime_default_value" android:entryValues="@array/pref_AppTime_values"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_myroutines">
        <Preference android:title="Tutorial" android:key="TutorialKey"/>
    </PreferenceCategory>
</PreferenceScreen>
