<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/recylerviewColor" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="@color/recylerviewColor" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp">
        <TextView android:textColor="@color/black_white" android:gravity="center" android:id="@+id/textViewTutorialHeadline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="Tutorial"/>
        <TextView android:textColor="@color/black_white" android:id="@+id/textViewTutorialSteps" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/StepsOfRoutine" android:layout_below="@+id/textViewTutorialHeadline"/>
        <TextView android:textColor="@color/black_white" android:id="@+id/textViewTutorialStep1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="20dp" android:text="@string/TutorialStep1" android:layout_below="@+id/textViewTutorialSteps"/>
        <ImageView android:id="@+id/ImageViewStartPage" android:layout_width="match_parent" android:layout_height="500dp" android:layout_marginTop="5dp" android:layout_marginBottom="20dp" android:src="@drawable/tst" android:layout_below="@+id/textViewTutorialStep1"/>
        <TextView android:textColor="@color/black_white" android:id="@+id/textViewTutorialStep2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="20dp" android:text="@string/TutorialStep2" android:layout_below="@+id/ImageViewStartPage"/>
        <ImageView android:id="@+id/ImageViewRoutineView" android:layout_width="match_parent" android:layout_height="500dp" android:layout_marginBottom="20dp" android:src="@drawable/routine_view" android:layout_below="@+id/textViewTutorialStep2"/>
        <ImageView android:id="@+id/ImageViewRoutineListView" android:layout_width="match_parent" android:layout_height="500dp" android:layout_marginTop="10dp" android:src="@drawable/list_view" android:layout_below="@+id/ImageViewRoutineView"/>
        <TextView android:textColor="@color/black_white" android:id="@+id/textViewTutorialStep3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/TutoiralStep3" android:layout_below="@+id/ImageViewRoutineListView"/>
    </RelativeLayout>
</ScrollView>
